2009-08-06  kitone  <kitone@gna.org>

	* src/main.cc:
	Init gstreamermm.

2009-08-05  kitone  <kitone@gna.org>

	* configure.in:
	Introduce new dependence to gstreamermm-0.10 >= 0.10.2.

2009-08-04  kitone  <kitone@gna.org>

	* src/we/waveformeditor.cc:
	Fix: keyframes changed don't redisplay waveform.

2009-08-04  kitone  <kitone@gna.org>

	* src/keyframes.h:
	Move constructor and desctructor from protected to public.

2009-08-03  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/actions/Makefile.am:
	Add new plugin keyframesmanagement.

	* plugins/actions/keyframesmanagement/Makefile.am:
	* plugins/actions/keyframesmanagement/keyframesmanagement.cc:
	* plugins/actions/keyframesmanagement/keyframesmanagement.se-plugin.in:
	Introduce new plugin keyframes management.

	* share/menubar.xml:
	* src/gui/menubar.cc:
	Add menu keyframes.

2009-08-03  kitone  <kitone@gna.org>

	* src/gui/dialogfilechooser.cc:
	* src/gui/dialogfilechooser.h:
	Add DialogOpenKeyframe class.

2009-08-03  kitone  <kitone@gna.org>

	* src/we/waveformrenderercairo.cc:
	Display the keyframes.

	* src/we/waveformrenderergl.cc:
	Display the keyframes. Need to be tested.

2009-08-02  kitone  <kitone@gna.org>

	* src/we/waveformeditor.cc:
	* src/we/waveformeditor.h:
	Update waveform when the keyframes changed.

2009-08-02  kitone  <kitone@gna.org>

	* src/we/waveformrenderer.cc:
	* src/we/waveformrenderer.h:
	Add keyframes support to the waveform renderer.

2009-08-02  kitone  <kitone@gna.org>

	* src/player.h:
	* src/vp/gstreamerplayer.cc:
	* src/vp/gstreamerplayer.h:
	Add keyframes support to the player.

2009-08-02  kitone  <kitone@gna.org>

	* src/Makefile.am:
	Add new files keyframes.h & keyframes.cc.

	* src/keyframes.cc:
	* src/keyframes.h:
	Introduce new class KeyFrames.

2009-07-13  kitone  <kitone@gna.org>

	* plugins/actions/findandreplace/dialog-find-and-replace.glade:
	* plugins/actions/findandreplace/findandreplace.cc: